python3.12 (3.12.6-1) UNRELEASED; urgency=medium

  * Python 3.12.6 release.

 -- Stefano Rivera <stefanor@debian.org>  Sat, 07 Sep 2024 12:05:25 +0200

python3.12 (3.12.5-4) unstable; urgency=medium

  * python3.x-tk: Make byte-compilation depend on the availability of
    the interpreter.

 -- Matthias Klose <doko@debian.org>  Thu, 22 Aug 2024 15:11:09 +0200

python3.12 (3.12.5-3) unstable; urgency=medium

  * Add python3.x-tk maintainer scripts.
  * Call dpkg with LC_ALL=C.UTF8 set.

 -- Matthias Klose <doko@debian.org>  Thu, 22 Aug 2024 09:49:39 +0200

python3.12 (3.12.5-2) experimental; urgency=medium

  * Build python3.12-gdbm and python3.12-tk packages again; Having these
    extensions hidden in the libpython-stdlib packages raises some chrootkit
    warnings. These packages should not be used as dependencies, and do not
    depend on the Python interpreter.  For dependencies, the existing
    python3-gdbm and python3-tk packages should be used.

 -- Matthias Klose <doko@debian.org>  Wed, 21 Aug 2024 09:45:53 +0200

python3.12 (3.12.5-1) unstable; urgency=medium

  * Python 3.12.5 release.
  * libpython-stdlib: Include the _gdbm and _tkinter extensions, prefixed
    with a dot, and no dependencies on the gbm and tcl/tk libraries.
  * Refresh patches.
  * Bump standards version.

 -- Matthias Klose <doko@debian.org>  Wed, 07 Aug 2024 15:49:14 +0200

python3.12 (3.12.4-3) unstable; urgency=medium

  [ Matthias Klose ]
  * Set ELF_PACKAGE_METADATA, if unset.
  * Fix multiarch path for hurd-amd64. Closes: #1076321.
  * Don't configure -with-dtrace on the Hurd. Closes: #1065456.
  * Update from the 3.12 branch 2024-07-15.

  [ Benjamin Drung ]
  * debian/rules: Use pkg-info.mk.
  * debian/rules: Use architecture.mk.
  * Rely on SOURCE_DATE_EPOCH for reproducibility.

  [ Graham Inggs ]
  * Drop test dependencies on python3-distutils.
  * Skip test_exceptions and test_repl which never run to
    completion on the Ubuntu autopkgtest infrastructure.
