@@ -9,7 +9,7 @@ Forwarded: no
 @@ -168,7 +168,7 @@ EXT_SUFFIX=	@EXT_SUFFIX@
  LDSHARED=	@LDSHARED@ $(PY_LDFLAGS)
  BLDSHARED=	@BLDSHARED@ $(PY_CORE_LDFLAGS)
- LDCXXSHARED=	@LDCXXSHARED@
+ LDCXXSHARED=	@LDCXXSHARED@ $(PY_LDFLAGS)
 -DESTSHARED=	$(BINLIBDEST)/lib-dynload
 +DESTSHARED=	$(LIBDEST)/lib-dynload
  
