@@ -6,8 +6,8 @@ Origin: upstream, https://github.com/python/cpython/commit/423e77d6de497931585d1
 
 --- a/Doc/conf.py
 +++ b/Doc/conf.py
-@@ -296,6 +296,10 @@ gettext_additional_targets = [
-     'index',
+@@ -297,6 +297,10 @@
+     'literal-block',
  ]
  
 +# Allow to build with Sphinx >= 3.2
@@ -19,7 +19,7 @@ Origin: upstream, https://github.com/python/cpython/commit/423e77d6de497931585d1
  
 --- a/Doc/Makefile
 +++ b/Doc/Makefile
-@@ -14,7 +14,7 @@ PAPER        =
+@@ -14,7 +14,7 @@
  SOURCES      =
  DISTVERSION  = $(shell $(PYTHON) tools/extensions/patchlevel.py)
  REQUIREMENTS = requirements.txt
